# lessoncrafterai

./: LICENSE  README.md  pyproject.toml
knowledge/vectorstore/: chroma.sqlite3
src/lessoncrafterai/: crew.py  main.py
src/lessoncrafterai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lessoncrafterai/config/: agents.yaml  tasks.yaml
src/lessoncrafterai/tools/: analyze_topics.py  generate_lessons.py  vectorize_pdf.py
