[project]
name = "lessoncrafterai"
version = "0.1.0"
description = "CrewAI project for vectorizing curriculum PDFs and extracting learning topics"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10,<=3.13"
dependencies = [
  "crewai[tools]>=0.102.0,<1.0.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-community>=0.1.0",
  "chromadb>=0.4.24",
  "openai>=1.0.0",
  "tiktoken>=0.5.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
run_crew = "lessoncrafterai.main:run"
train = "lessoncrafterai.main:train"
test = "lessoncrafterai.main:test"
replay = "lessoncrafterai.main:replay"



[tool.uv]
package = true